finally added a range of tests that also serves as a working example, partially solves #1

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-app.py
-config/
+# config/
+# reply_data/
+# reply_rulesets/
+# reply_templates/
+# tests/
 maildoglog.txt
-reply_data/
-reply_rulesets/
-reply_templates/
-tests/
 __py*
 *.pyc
 */*.pyc
