--- a/maildog/tests/config/maildog.service
+++ b/maildog/tests/config/maildog.service
@@ -1,15 +1,8 @@
 [Unit]
-Description=Maildog: the extensible, email reply hound
+Description=Maildog: the extensible, email reply pup at your service
 
 [Service]
-# Type=forking
-# EnvironmentFile=-%h/.profile
-ExecStart={{ path }}/maildog
-# ExecStop=
-# Restart=always
-# Remove the limit in startup timeout, since maildog
-# cloning and building all packages can take time
-TimeoutStartSec=30
-
+ExecStart=maildog/tests/example_app.py
+  
 [Install]
 WantedBy=multi-user.target
